--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "alpinejs": "^3.14.8"
+        "alpinejs": "^3.14.8",
+        "human-time": "^0.0.2"
     }
 }
