--- a/package.json
+++ b/package.json
@@ -8,17 +8,16 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.9",
         "@tailwindcss/typography": "^0.5.15",
+        "alpinejs": "^3.14.9",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "human-time": "^0.0.2",
         "laravel-vite-plugin": "^1.0",
+        "leaflet": "^1.9.4",
         "postcss": "^8.4.47",
         "postcss-nesting": "^13.0.0",
         "tailwindcss": "^3.4.14",
         "vite": "^5.0"
-    },
-    "dependencies": {
-        "alpinejs": "^3.14.8",
-        "human-time": "^0.0.2"
     }
 }
